--- a/frontend/web/src/app/pages/main/goals_and_bills/items/bill-item/bill-item.css
+++ b/frontend/web/src/app/pages/main/goals_and_bills/items/bill-item/bill-item.css
@@ -1,7 +1,7 @@
 @reference 'tailwindcss';
 
 .bill-item {
-  @apply flex flex-row items-center justify-between gap-4 p-2 my-1;
+  @apply flex flex-row items-center justify-between gap-4 py-2 px-1 my-1;
 
   .bill-item-logo {
     @apply relative shrink-0 grid place-items-center size-13 rounded-full bg-(--body-background) overflow-hidden;
@@ -15,7 +15,7 @@
     @apply flex-1 flex flex-col gap-1 overflow-hidden;
 
     .bill-item-title {
-      @apply font-semibold;
+      @apply font-semibold text-sm;
     }
 
     .bill-item-charge {
